Implementação do SerasaSoapAdapter, Template Method e validação de CPF/CNPJ